fixes after Ihor reiview v1.01

--- a/src/styles/art-museum/art-museum.scss
+++ b/src/styles/art-museum/art-museum.scss
@@ -63,17 +63,6 @@
     }
   }
 
-  &__content-group {
-    @include on-tablet {
-      position: relative;
-      grid-column: 1/3;
-      order: 1;
-    }
-    @include on-lap-top {
-      grid-column: 3/6;
-    }
-  }
-
   &__title {
     min-width: 280px;
     margin: 0 20px 20px;
@@ -86,7 +75,10 @@
 
     @include on-tablet {
       position: absolute;
+      grid-column: 3/7;
+      transform: translateX(-63%);
       top: 20vw;
+      max-width: 360px;
       font-size: 55px;
       line-height: 55px;
       margin-left: 0;
@@ -94,6 +86,8 @@
 
     }
     @include on-lap-top {
+      max-width: 460px;
+
       font-size: 72px;
       line-height: 72px;
       top: 30%;
