--- a/src/styles/buy-ticket/buy-ticket.scss
+++ b/src/styles/buy-ticket/buy-ticket.scss
@@ -11,6 +11,9 @@
 
   @include on-tablet {
     position: relative;
+    grid-column: 1/3;
+    justify-self: flex-end;
+    order: 1;
     top: 20vw;
     transform: translateY(150px);
     grid-template-columns: 150px 50px;
@@ -19,6 +22,7 @@
   }
 
   @include on-lap-top {
+    grid-column: 3/6;
     top: 38.5%;
   }
 
