--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -63,6 +63,41 @@
     }
   }
 
+  &__contacts-call-phone-link {
+    display: inline-block;
+    color: $c-black;
+    text-decoration: none;
+    transition: all 0.2s linear;
+
+    &:hover {
+      transform: scale(1.2);
+      color: $c-green;
+    }
+
+  }
+  &__contacts-email-link {
+    display: inline-block;
+    color: $c-black;
+    text-decoration: none;
+    transition: all 0.2s linear;
+
+    &:hover {
+      transform: scale(1.2);
+      color: $c-green;
+    }
+  }
+  &__contacts-address-link {
+    display: inline-block;
+    color: $c-black;
+    text-decoration: none;
+    transition: all 0.2s linear;
+
+    &:hover {
+      transform: scale(1.2);
+      color: $c-green;
+    }
+  }
+
   &__schedule-title {
     padding-bottom: 20px;
   }
@@ -197,4 +232,5 @@
     }
 
   }
+
 }
