--- a/src/styles/logo/logo.scss
+++ b/src/styles/logo/logo.scss
@@ -6,7 +6,18 @@
   transition: all 0.2s linear;
 
   &:hover {
-    transform: scale(1.2);
     color: $c-green;
+
+    @include on-tablet {
+      transform: scale(1.2);
+    }
+  }
+
+  @media (min-width: 420px) and (max-width: 768px) {
+    color: $c-white;
+  }
+
+  @media (min-width: 2200px) {
+    color: $c-white;
   }
 }
