--- a/src/styles/buy-ticket/buy-ticket.scss
+++ b/src/styles/buy-ticket/buy-ticket.scss
@@ -10,11 +10,13 @@
   }
 
   @include on-tablet {
+
     position: relative;
     grid-column: 1/3;
     justify-self: flex-end;
     order: 1;
     top: 20vw;
+    max-height: 70px;
     transform: translateY(150px);
     grid-template-columns: 150px 50px;
     width: 220px;
