--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -11,6 +11,16 @@
     margin: 0;
   }
 
+  &__cross {
+    height: 17px;
+    width: 17px;
+    transition: 0.3s;
+
+    &:hover {
+      transform: rotate(90deg);
+    }
+  }
+
   &__link {
     text-decoration: none;
     color: #000;
