--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -26,12 +26,12 @@
   }
 
   &__button {
-    flex-basis: 20%;
     background-color: #f14a27;
     background-image: url(../images/arrow.png);
     background-position: center;
     background-repeat: no-repeat;
     height: 50px;
+    min-width: 50px;
     cursor: pointer;
     transition: 0.3s;
 
