--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -6,20 +6,47 @@
   line-height: 150%;
   color: #0f0e08;
 
+  &__foot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  &__copy {
+    margin-bottom: 50px;
+  }
+
+  &__design {
+    order: -1;
+    margin-bottom: 15px;
+  }
+
   &__first {
     display: flex;
     justify-content: space-between;
   }
 
+  &__cont {
+    display: flex;
+    margin-bottom: 70px;
+  }
+
   &__second {
     width: 46%;
-    margin-bottom: 110px;
   }
 
   &__third {
-    position: absolute;
-    transform: translate(100%, -210%);
     width: 46%;
+  }
+
+  &__four {
+    margin-bottom: 20px;
+  }
+
+  &__five {
+    margin-bottom: 70px;
   }
 
   &__logo {
@@ -36,13 +63,9 @@
   }
 
   &__line-container {
-    position: absolute;
     z-index: -1;
+    height: 1;
     width: 100%;
-    display: flex;
-    top: 570px;
-    
-    justify-content: center;
   }
 
   &__link {
@@ -54,6 +77,7 @@
     height: 1px;
     width: 80%;
     background: rgba(26, 90, 76, 0.5);
+    margin-bottom: 70px;
   }
 
   &__name {
@@ -84,6 +108,20 @@
   @include onDesktop {
     height: 450px;
 
+    &__foot {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    &__copy {
+      margin-bottom: 0;
+    }
+
+    &__design {
+      order: 0;
+      margin-bottom: 0;
+    }
+
     &__nav {
       margin-bottom: 140%;
     }
@@ -93,19 +131,31 @@
     }
 
     &__line-container {
-      width: 100%;
-      display: flex;
-      top: unset;
+      width: 1px;
       height: 260px;
+      position: absolute;
     }
 
     &__line {
+      margin-bottom: 0;
       width: 1px;
-      height: 100%;
+      height: 260px;
+      
+    }
+
+    &__cont {
+      margin-bottom: 0;
     }
 
     &__second {
       width: 100%;
+    }
+
+    &__four {
+      margin-bottom: 0;
+    }
+
+    &__five {
       margin-bottom: 0;
     }
 
