--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -25,6 +25,15 @@
     text-decoration: none;
     color: #000;
     font-family: "Oswald", sans-serif;
+
+    &:hover::after {
+      display: block;
+      content: "";
+      height: 4px;
+      width: 100%;
+      background-color: grey;
+      border-radius: 8px;
+    }
   }
 
   &__li {
