--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -4,6 +4,17 @@
   width: 100%;
   align-items: center;
 
+  &__link {
+    &:hover::after {
+      display: block;
+      content: "";
+      height: 4px;
+      width: 50px;
+      background-color: grey;
+      border-radius: 8px;
+    }
+  }
+
   &__menu {
     height: 18px;
     width: 18px;
@@ -16,6 +27,7 @@
       transform: scale(1.2);
     }
   }
+  
 
   &__logo {
     text-decoration: none;
