do fixes after Ihor comments. v1.03

--- a/src/styles/navigation-menu/navigation-menu.scss
+++ b/src/styles/navigation-menu/navigation-menu.scss
@@ -2,7 +2,7 @@
   position: absolute;
   z-index: 2;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   transform: translateY(-150%);
   padding: 9px 0 0;
   background-color: $c-white;
@@ -32,7 +32,7 @@
 
     @include on-lap-top {
       grid-template-rows: auto;
-      grid-template-columns: 68px 1fr 18px;
+      grid-template-columns: 100px 1fr 10px;
       align-items: flex-end;
       padding-bottom: 0;
     }
@@ -45,8 +45,9 @@
     list-style-type: none;
 
     @include on-lap-top {
+      width: 100%;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: space-between;
       justify-self: center;
       align-self: center;
       padding-bottom: 10px;
@@ -115,7 +116,6 @@
   }
 
   &__search {
-
     @include on-lap-top {
       align-self: center;
     }
