final-final fixes

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -22,6 +22,7 @@
 
     &::before {
       content: "КВИТКИ";
+      transition: 0.3s;
     }
   }
 
@@ -57,6 +58,7 @@
 
     .button__text::before {
       content: "Купити квитки";
+      transition: 0.3s;
     }
 
     .button__arrow {
