--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -15,6 +15,7 @@
     height: 17px;
     width: 17px;
     transition: 0.3s;
+    padding-bottom: 5px;
 
     &:hover {
       transform: rotate(90deg);
@@ -22,9 +23,11 @@
   }
 
   &__link {
+    position: relative;
     text-decoration: none;
     color: #000;
     font-family: "Oswald", sans-serif;
+    padding-bottom: 5px;
 
     &:hover::after {
       display: block;
@@ -33,6 +36,7 @@
       width: 100%;
       background-color: grey;
       border-radius: 8px;
+      position: absolute;
     }
   }
 
@@ -72,13 +76,6 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
-    }
-
-    &__loop {
-      width: 18px;
-      height: 18px;
-      background-image: url(../images/loop.png);
-      background-repeat: no-repeat;
     }
   }
 }
