--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,11 +8,12 @@ html {
 
   &__menu {
     position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
     right: 0;
 
-    transform: translateX(-100%);
+    transform: translateY(-100%);
     transition: transform 0.3s;
 
     &:target {
