--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -5,7 +5,7 @@
 
   @media (min-width: 768px) {
     margin: 0;
-    padding-left: 34px;
+    /*padding-left: 34px;*/
     width: 220px;
     height: 70px;
   }
@@ -17,6 +17,10 @@
     text-align: center;
     border: 1px solid $green;
     transition: border 0.3s;
+
+    @media (max-width: 290px) {
+      width: 200px;
+    }
 
     &:hover {
       border: 2px solid $green;
