--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,21 +4,23 @@
 
 @import "blocks/header.scss";
 @import "blocks/menu.scss";
+@import "blocks/nav.scss";
+@import "blocks/icon.scss";
+@import "blocks/capital.scss";
 @import "blocks/form.scss";
 @import "blocks/events.scss";
 @import "blocks/lection.scss";
 @import "blocks/gallery.scss";
 @import "blocks/follow.scss";
 @import "blocks/footer.scss";
-@import "blocks/nav.scss";
 
-*,
-*::after,
-*::before {
+* {
   box-sizing: border-box;
 }
 
 .page {
+  width: 100%;
+  max-width: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
   background-color: $c-gray;
@@ -43,7 +45,9 @@
 
   &__body {
     margin: 0;
-    
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
   }
 
   &__main {
