--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,10 +1,10 @@
 .events {
   display: block;
-  height: fit-content;
+  max-width: 1750px;
+  margin: 0 auto;
 
   @include laptop {
     display: flex;
-    margin: 0 auto;
     width: fit-content;
   }
 
@@ -23,6 +23,10 @@
       display: inline-block;
       width: fit-content;
       padding-bottom: 60px;
+    }
+
+    @include laptop {
+      margin-top: 200px;
     }
   }
 
@@ -85,6 +89,22 @@
       display: inline-block;
       content: url(/images/rectangle.svg);
       transform: translateY(-7%);
+    }
+
+    @include tablet {
+      font-size: 36px;
+    }
+  }
+
+  &__exhibition-info {
+    max-width: 85vw;
+
+    @include tablet {
+      max-width: 60vw;
+    }
+
+    &_exhibition-1 {
+      padding-bottom: 50px;
     }
   }
 
