--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,15 +1,4 @@
 .header {
-  position: relative;
-  width: 100%;
-  height: 300px;
-
-  @include tablet {
-    height: 384px;
-  }
-  @include laptop {
-    height: 655px;
-  }
-
   &__events {
     transform: rotate(-90deg);
     display: none;
@@ -39,7 +28,7 @@
     }
   }
 
-  &__title {
+  /*&__title {
     text-align: center;
 
     font-family: "Monserat", sans-serif;
@@ -53,86 +42,20 @@
       width: min-content;
       font-size: 55px;
     }
-  }
-}
 
-.desktop-wrapper {
-  display: grid;
-  margin-top: 20em;
-  justify-content: center;
-
-  @media (min-width: 280px) {
-    margin-top: 19em;
-  }
-
-  @media (min-width: 360px) and (min-height: 812px) {
-    margin-top: 26em;
-  }
-
-  @media (min-width: 411px) {
-    margin-top: 22em;
-  }
-
-  @media (min-width: 411px) and (min-height: 823px) {
-    margin-top: 26em;
-  }
-  
-  @include tablet {
-    margin-top: 0;
-
-    position: absolute;
-    top: 135px;
-    left: 20px;
-  }
-
-  @media (min-width: 1024px) {
-
-    position: absolute;
-    top: 135px;
-    left: 275px;
-
-  }
-}
-
-.transparent {
-  @media (min-width: 768px) {
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 1px black;
-  }
-}
-
-.header__header-image {
-  background-image: url("../images/header.png");
-  background-size: cover;
-  background-position: top right;
-  background-repeat: no-repeat;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: -1;
-  width: 100vw;
-  height: 60%;
-
-  @include tablet {
-    width: 505px;
-    height: 384px;
-  }
-
-  @include laptop {
-    width: 725px;
-    height: 655px;
-  }
-
-  @include desktop {
-    width: 805px;
-  }
-
-  @include desktopLarge {
-    width: 1245px;
-  }
+    @include laptop {
+      font-size: 72px;
+    }
+  }*/
 }
 
 .top-actions {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  max-width: 1750px;
+  margin: 0 auto;
   display: grid;
   padding: $header-padding;
   grid-template-columns: $icon-width 1fr $icon-width;
@@ -140,18 +63,18 @@
   align-items: center;
 }
 
-.icon {
+/*.icon {
   display: block;
   width: 18px;
   height: 18px;
   
   background-size: contain;
   background-repeat: no-repeat;
+  cursor: pointer;
   
   &--menu {
     background-image: url(../images/menu.svg);
     transition: transform 0.3s;
-    cursor: pointer;
   
     &:hover {
       transform: scale(1.1);
@@ -166,4 +89,4 @@
       transform: scale(1.1);
     }
   }
-}
+}*/
