--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,23 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin forTablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin forDesktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin forLargeDesktop {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
+
+@mixin forExtraLargeDesktop {
+  @media (min-width: 1920px) {
+    @content;
   }
 }
