--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$swampGreen: #1a5a4c;
+$kindaBlack: #0f0e08;
+$greyBlue: #687480;
+$kindaRed: #f14a27;
+$grey: #4e4e4e;
+$lightGrey: #d7dde3;
