--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/mixins";
+@import "utils/vars";
+@import "utils/extends";
 
-body {
-  background: $c-gray;
-}
+@import "utils/reset";
+
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/logo";
+@import "blocks/menu";
+@import "blocks/section";
+@import "blocks/intro";
+@import "blocks/container";
+@import "blocks/events";
+@import "blocks/gallery";
+@import "blocks/cta";
+@import "blocks/info";
+@import "blocks/footer";
