--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,9 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%title-text {
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+}
+
+%title-text-small {
+  font-family: Montserrat, sans-serif;
   font-weight: 400;
 }
