menu icons were changed

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -90,9 +90,19 @@
   &__img {
     width: 18px;
     fill: white;
+    transition: all 0.3s;
 
     @include forDesktop {
       fill: $kindaBlack;
+    }
+
+    &:hover {
+      fill: $lightGrey;
+      transform: scale(1.2);
+
+      @include forDesktop {
+        fill: $swampGreen;
+      }
     }
   }
 
