--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,7 +1,9 @@
 .icon {
-  display: block;
+  display: inline-block;
   width: 18px;
   height: 18px;
+  z-index: 6;
+  position: relative;
   
   background-size: contain;
   background-repeat: no-repeat;
@@ -24,4 +26,12 @@
       transform: scale(1.1);
     }
   }
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
 }
