--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -16,25 +16,6 @@
     gap: 126px;
   }
 
-  &::before {
-    position: absolute;
-    top: -40px;
-    content: " ";
-    width: 93vw;
-    height: 1px;
-    background: rgba(26, 90, 76, 0.5);
-
-    @include tablet {
-      width: 60vw;
-      transform: translateX(50px);
-    }
-
-    @include laptop {
-      transform: translate(-250px, 250px) rotate(-90deg);
-      width: 30vw;
-    }
-  }
-
   &__list {
     padding-left: 0;
   }
@@ -50,5 +31,24 @@
     font-size: 14px;
     line-height: 250%;
     color: $dark-brown;
+  }
+}
+
+.nav--line::before {
+  position: absolute;
+  top: -40px;
+  content: " ";
+  width: 93vw;
+  height: 1px;
+  background: rgba(26, 90, 76, 0.5);
+
+  @include tablet {
+    width: 60vw;
+    transform: translateX(50px);
+  }
+
+  @include laptop {
+    transform: translate(-250px, 250px) rotate(-90deg);
+    width: 30vw;
   }
 }
