--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,11 +4,11 @@
   z-index: 5;
   overflow: hidden;
   box-shadow: 6px 6px 6px rgba(26, 90, 76, 0.25);
-  opacity: 0;
+  display: none;
   transform: translateY(-100%);
 
   &--active {
-    opacity: 1;
+    display: block;
     transform: translateY(0);
   }
 
@@ -20,13 +20,13 @@
   &__nav {
     @include tablet {
       display: flex;
-      gap: 8em;
+      gap: 16px;
+      justify-content: center;
     }
   }
 
   &__list {
     /*max-height: 40vh;*/
-    margin-top: 0;
     max-width: 100vw;
     list-style: none;
     display: flex;
@@ -57,6 +57,10 @@
       padding: 14px;
     }
 
+    @media (max-width: 320px) {
+      width: 166px;
+    }
+
     &:hover {
       transform: scale(1.1);
       box-shadow: 1px 4px 1px rgba(26, 90, 76, 0.25);
@@ -76,8 +80,8 @@
 }
 
 .nav-container {
-  /*margin-top: 1.5em;*/
   display: flex;
+  flex-direction: column;
   justify-content: center;
   justify-items: center;
 }
