--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,12 +35,12 @@
     left: 0;
     right: 0;
   
-    transform: translateY(-100%);
+    /*transform: translateY(-100%);
     transition: transform 0.3s;
   
     &:target {
       transform: translateY(0);
-    }
+    }*/
   }
 
   &__body {
