--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,3 +1,9 @@
+$width-mobile-s: 670px;
+$width-mobile-l: 770px;
+$width-laptop-s: 880px;
+$width-laptop-m: 900px;
+$width-laptop-l: 1000px;
+
 .header {
   max-width: $mx-width-header;
   width: 100%;
@@ -59,6 +65,10 @@
     color: $c-dark;
   }
 
+  &__logo--hiden {
+    opacity: 0;
+  }
+
   &__uil-bars {
     width: 24px;
     height: 24px;
@@ -102,7 +112,7 @@
     -webkit-text-fill-color: rgba(0, 0, 0, 0);
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: none;
-    z-index: 10;
+    z-index: 1;
     @media only screen and (max-width: $tablet-s) {
       font-weight: bold;
       position: relative;
@@ -207,6 +217,169 @@
     &:hover {
       box-shadow: -1px 1px 20px 4px #1a5a4c5b;
       cursor: pointer;
+    }
+  }
+  &__container {
+    width: 100%;
+    height: 48px;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+  }
+
+  &__nav-icon {
+    display: block;
+    position: relative;
+    z-index: 100;
+    width: 30px;
+    height: 20px;
+    background: url(../images/menu.svg) no-repeat center;
+    cursor: pointer;
+    transition: transform 3s;
+    background-color: #1a5a4c;
+    border-radius: 10%;
+    @media only screen and (min-width: $width-laptop-m) {
+      width: 36px;
+      height: 36px;
+    }
+
+    &:hover {
+      background-image: url(../images/menu_hover.svg);
+    }
+  }
+
+  &__nav-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    visibility: hidden;
+    padding: 36px 20px 80px;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 102vh;
+    list-style: none;
+    z-index: 2;
+    background-color: #1a5a4c;
+
+    transition: opacity 0.3s linear;
+    @media only screen and (min-width: 400px) {
+      padding: 48px 120px 80px;
+    }
+  }
+
+  &__nav-items--active {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  &__nav-items-container {
+    @media only screen and (min-width: $width-laptop-m) {
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+  }
+
+  &__nav-toggler {
+    display: none;
+    position: relative;
+    z-index: 100;
+  }
+
+  &__nav-toggler:checked ~ &__nav-icon {
+    z-index: 100;
+    background-image: url(../images/cross.svg);
+    transform: rotate(180deg);
+    overflow-y: hidden;
+  }
+
+  &__nav-toggler:checked ~ &__nav-items {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  &__nav-list {
+    list-style: none;
+    scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1000px;
+  }
+
+  &__nav-item {
+    width: 100%;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 22px;
+    line-height: 22px;
+    font-weight: bold;
+    color: #fff;
+    margin-bottom: 32px;
+  }
+
+  &__nav-item-link {
+    text-decoration: none;
+    color: white;
+    border-color: none;
+    border-bottom: 1px solid transparent;
+    transition: border-color 0.3s;
+
+    &:hover {
+      border-color: white;
+    }
+  }
+
+  &__text-number-to-call {
+    position: relative;
+    width: 32px;
+    height: 32px;
+    text-decoration: none;
+    color: white;
+
+    &::before {
+      position: absolute;
+      content: "+1 234 555-55-55";
+      font-style: normal;
+      font-weight: bold;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 2px;
+      width: 176px;
+      height: 32px;
+      right: 0;
+      top: 30%;
+      opacity: 0;
+      transition: opacity 0.3s linear;
+    }
+  }
+
+  &__nav-item-number {
+    text-decoration: none;
+    color: #fff;
+    letter-spacing: 2px;
+    font-size: 12px;
+    line-height: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  &__nav-item-link-to-call {
+    margin-top: 26px;
+    color: white;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 16px;
+    border-bottom: none;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+
+    &:hover {
+      border-bottom: 1px solid white;
     }
   }
 }
