--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -142,7 +142,11 @@
   &__info {
     width: 100%;
     max-width: 384px;
-    padding: 16px 10px 0;
+    padding-top: 16px;
+
+    @include forTablet {
+      padding: 16px 10px 0;
+    }
 
     @include forDesktop {
       padding: 64px 10px 0 0;
