--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -43,3 +43,26 @@
     }
   }
 }
+
+#page__top-btn {
+  display: none;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 100px;
+  right: 30px;
+  z-index: 100;
+  background-color: white;
+  background-image: url(../images/arrow-up.png);
+  background-size: 10px 12px;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  border: 1px solid $swampGreen;
+  border-radius: 50%;
+  cursor: pointer;
+
+  @include forTablet {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
