--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     gap: 10px;
     padding-left: 0;
+    padding-bottom: 10px;
     margin: 0;
   }
 
@@ -16,6 +17,9 @@
     width: 17px;
     transition: 0.3s;
     padding-bottom: 5px;
+    position: absolute;
+    top: 35px;
+    right: 35px;
 
     &:hover {
       transform: rotate(90deg);
@@ -48,7 +52,13 @@
     text-decoration: none;
   }
 
-  @include iPad {
+  @include onDesktop {
+    &__link {
+      position: relative;
+      text-decoration: none;
+      color: #000;
+    }
+
     &__list {
       display: flex;
       flex-direction: row;
@@ -62,12 +72,7 @@
       gap: 40px;
       align-items: flex-end;
     }
-  
-    &__link {
-      text-decoration: none;
-      color: #000;
-    }
-  
+
     &__li {
       list-style: none;
     }
