--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -89,6 +89,15 @@
       height: 70px;
       width: 80%;
       font-size: 30px;
+      padding: 14px;
+
+      &::placeholder {
+        transform: translateY(-5px);
+        font-size: 14px;
+        line-height: 100%;
+        color: #687480;
+        padding: 0 31px;
+      }
     }
 
     &__title {
