made changes in gallery block

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -32,11 +32,21 @@
     max-height: 280px;
     margin-bottom: 20px;
     overflow: hidden;
+    transition: transform 0.4s ease;
 
     &:after {
       content: "";
       display: block;
       padding-bottom: 100%;
+    }
+
+    &:hover {
+      transform: translateY(5%);
+      box-shadow: -10px -10px 20px $buyColor;
+    }
+
+    &--pict-1:hover {
+      box-shadow: 10px 10px 20px $buyColor;
     }
 
     @include on768 {
