--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -11,12 +11,36 @@
     line-height: 100%;
     color: $subTitleColor;
 
+    &--small-screns {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      margin: 0;
+      margin-bottom: 40px;
+      font-size: 48px;
+      line-height: 100%;
+      color: $subTitleColor;
+
+      @media (min-width: 768px) {
+        display: none;
+      }
+    }
+
     @include on768 {
       display: block;
+    }
+
+    @media (max-width: 767px) {
+      display: none;
     }
   }
 
   &__item--1 {
+    @media (max-width: 767px) {
+      display: none;
+    }
+
     @media (min-width: 768px) {
       grid-column: 1 / 6;
     }
