--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "../styles/blocks/action.scss";
 @import "../styles/blocks/buy.scss";
 @import "../styles/blocks/grid.scss";
+@import "../styles/blocks/carousel.scss";
 
 @import "../styles/blocks/art.scss";
 @import "../styles/blocks/events.scss";
