--- a/src/styles/blocks/art-content.scss
+++ b/src/styles/blocks/art-content.scss
@@ -94,7 +94,7 @@
     top: 70%;
     left: 50%;
     transform: translate(-50%, 15%);
-    height: 180px;
+    height: 140px;
 
     background: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
@@ -105,6 +105,10 @@
 
     @include on768 {
       top: 85%;
+    }
+
+    @media (max-width: 467px) {
+      height: 180px;
     }
   }
 }
