--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$colorPomegranate: #f14a27;
+$colorGreenPea: #1a5a4a;
+$colorMarshland: #0f0e08;
+$colorGreyLight: #687480;
+$colorGreyDark: #4e4e4e;
