--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/vars";
+@import "utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+
+@import "./blocks/header.scss";
+@import "./blocks/top-bar.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
