--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,7 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%logo {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 36px;
+  color: #0f0e08;
+  text-decoration: none;
 }
