--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,6 +6,7 @@
   @include smartphone {
     background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
     background-size: cover;
+    background-position: top 0 left 0;
     opacity: 0;
     transition: opacity 1s;
   }
@@ -26,7 +27,7 @@
 
     @include smartphone {
       flex-direction: column;
-      height: 450px;
+      height: 50vh;
       background-color: rgba(255, 255, 255, 0.75);
     }
   }
