--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,5 @@
 @import "./blocks/header.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/page.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lecture.scss";
