--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,9 +1,22 @@
 .page {
   font-family: "Montserrat", sans-serif;
   background-color: #fff;
+  scroll-behavior: smooth;
 
   &__body {
     margin: 0;
+  }
+
+  &__header {
+    margin-bottom: 200px;
+
+    @include tablet {
+      margin-bottom: 90px;
+    }
+
+    @include smartphone {
+      margin-bottom: 70px;
+    }
   }
 
   &__menu {
@@ -11,5 +24,48 @@
     top: 0;
     width: 100%;
     transform: translateY(-100%);
+  }
+
+  &__section {
+    margin: 0 auto;
+    max-width: 1170px;
+
+    @include largeScreen {
+      max-width: 1570px;
+    }
+
+    @include tablet {
+      max-width: unset;
+      margin: 0 40px;
+    }
+
+    @include smartphone {
+      max-width: unset;
+      margin: 0 20px;
+    }
+  }
+
+  &__section-title {
+    margin: 0 0 60px;
+    padding: 0;
+    font-weight: 700;
+    font-size: 48px;
+    color: rgba(15, 14, 8, 1);
+
+    @include tablet {
+      margin-bottom: 50px;
+    }
+
+    @include smartphone {
+      font-size: 36px;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+  }
+
+  &__lecture {
+    @include tablet {
+      margin: 90px 40px 0;
+    }
   }
 }
