--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,2 +1,6 @@
 $color-grey: rgba(132, 123, 116, 1);
-$color-green: #1a5a4c;
+$color-green: rgba(26, 90, 76, 1);
+$color-dark: rgba(15, 14, 8, 1);
+$color-orange: rgba(241, 74, 39, 1);
+$type-color: rgba(104, 116, 128, 1);
+$about-color: rgba(78, 78, 78, 1);
