--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -6,12 +6,17 @@
   line-height: 150%;
   color: #0f0e08;
 
+  &__contacs {
+    position: relative;
+  }
+
   &__foot {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-bottom: 50px;
   }
 
   &__copy {
@@ -57,6 +62,7 @@
     font-weight: 600;
   }
   &__nav {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 20px;
