--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -4,13 +4,21 @@
   width: 100%;
   align-items: center;
 
+  &__list {
+    display: grid;
+    gap: 20px;
+    text-decoration: none;
+    list-style-type: none;
+  }
+
   &__link {
+    position: relative;
     &:hover::after {
       position: absolute;
       display: block;
       content: "";
       height: 4px;
-      width: 50px;
+      width: 100%;
       background-color: grey;
       border-radius: 8px;
     }
