--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,5 @@
 @import "./blocks/page.scss";
 @import "./blocks/events.scss";
 @import "./blocks/lecture.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
