--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -98,12 +98,17 @@
     margin-bottom: 20px;
   }
 
-  &__schedule-hours {
-    margin-bottom: 20px;
-  }
-
   &__schedule {
     width: 170px;
+  }
+
+  &__schedule-info {
+    width: max-content;
+    max-width: 130px;
+  }
+
+  &__schedule-hours {
+    margin-bottom: 20px;
   }
 
   &__contacts {
