--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -22,6 +22,7 @@
 
   &__indent {
     min-width: 34px;
+    max-width: 180px;
     flex-basis: 0;
     flex-grow: 1;
 
@@ -35,10 +36,11 @@
     width: 500px;
 
     @include tablet {
-      width: 470px;
+      max-width: 230px;
     }
 
     @include smartphone {
+      max-width: unset;
       position: static;
       width: unset;
       display: flex;
@@ -104,11 +106,11 @@
     flex-grow: 1;
     background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
     background-size: cover;
-    background-position: top 0 left 0;
+    background-position: center;
 
     @include smartphone {
       // flex-grow: 0;
-      max-height: 50vh;
+      max-height: 53vh;
     }
   }
 
