--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,7 +8,6 @@
   }
 
   &__header {
-    margin-bottom: 200px;
 
     @include tablet {
       margin-bottom: 90px;
@@ -27,7 +26,7 @@
   }
 
   &__section {
-    margin: 0 auto;
+    margin: 200px auto 0;
     max-width: 1170px;
 
     @include largeScreen {
@@ -64,12 +63,30 @@
   }
 
   &__lecture {
+    margin-bottom: 300px;
+
     @include tablet {
-      margin: 90px 40px 0;
+      margin: 90px 40px 210px;
+    }
+
+    @include smartphone {
+      margin: 0 0 200px;
     }
   }
 
   &__subscription {
-    margin-top: 300px;
+    margin-top: 200px;
+
+    @include tablet {
+      margin-top: 90px;
+    }
+
+    @include smartphone {
+      margin-top: 100px;
+    }
+  }
+
+  &__footer {
+    margin-top: 0;
   }
 }
