--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,4 +13,5 @@
 @import "./blocks/events.scss";
 @import "./blocks/lecture.scss";
 @import "./blocks/subscription.scss";
+@import "./blocks/gallery.scss";
 @import "./blocks/footer.scss";
