--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
 @import "fonts";
 @import "typography";
+@import "utils/_vars";
+@import "utils/_mixins";
+@import "utils/_extends";
+@import "blocks/reset.scss";
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/select.scss";
+@import "blocks/top-line.scss";
+@import "blocks/menu.scss";
+@import "blocks/list.scss";
+@import "blocks/form.scss";
 
 body {
-  background: $c-gray;
+  width: 100vw;
 }
