--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,8 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+%mainTitle {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+}
