--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,21 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin iPad {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin media-1280 {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin media-1920 {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
