--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -28,6 +28,7 @@
     height: 520px;
     max-width: 670px;
     object-fit: cover;
+    @extend %image-hover;
 
     @include largeScreen {
       max-width: 870px;
@@ -116,9 +117,5 @@
     font-size: 16px;
     font-weight: 300;
     color: $about-color;
-  }
-
-  &__image--3 {
-    width: min-content;
   }
 }
