--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,7 +7,7 @@
   @include smartphone {
     background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
     background-size: cover;
-    background-position: top 0 left 0;
+    background-position: center;
     opacity: 0;
     transition: opacity 1s;
   }
