--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -18,6 +18,22 @@
     top: 15px;
     left: 50%;
     transform: translateX(-50%);
+
+    &-element {
+      transition: all 0.5s;
+    }
+
+    &:hover {
+      transform: translateX(-50%) scale(1.05);
+    }
+
+    &:hover .header__logo-element--1 {
+      transform: translateX(-50%) translateY(50%);
+    }
+
+    &:hover .header__logo-element--2 {
+      transform: translateX(50%) translateY(-50%);
+    }
   }
 
   &__indent {
