--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,31 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+  
+@import "utils/variables.scss";
+@import "utils/mixins.scss";
+@import "utils/extends.scss";
 
-body {
-  background: $c-gray;
+@import "blocks/container.scss";
+@import "blocks/link.scss";
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/grid.scss";
+@import "blocks/mainpart.scss";
+@import "blocks/event.scss";
+
+.lection {
+  background-image: url("../images/sunset.png");
+  background-position: bottom right;
+  height: 210px;
+
+  &__image {
+    min-width: 700px;
+    max-width: 1105;
+  }
+
+  @include onTablet {
+    background-image: none;
+    
+  }
 }
