--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -4,14 +4,10 @@
 
   &__image {
     display: block;
-    // height: 210px;
-    // width: ;
-    object-fit: cover;
 
-    // @include onTablet {
-    //   height: 520px;
-    //   max-width: 700px;
-    // }
+    @include onTablet {
+      max-height: 520px;
+    }
   }
 
   &__description {
