omg events && gallery && subscription --done

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,5 +1,20 @@
 .container {
+  position: relative;
   margin: 0 auto;
-  max-width: 1570px;
+  box-sizing: border-box;
   padding: 0 20px;
+  
+  @include tablet {
+    max-width: 700px;
+    padding: 0 34px;
+  }
+
+  @include desktop {
+    max-width: 1170px;
+    padding: 0 55px;
+  }
+
+  @include desktopWide {
+    max-width: 1570px;
+  }
 }
