--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,7 +1,16 @@
 .header {
+
+  &--main-page {
+    display: block;
+  }
+  
   &__title {
     font-size: 45px;
     line-height: 100%;
     font-weight: 700;
+  }
+
+  &__tickets {
+    display: block;
   }
 }
