--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,9 +1,25 @@
 .page {
-  font-family: "Montserrat", "IBM Plex Sans", sans-serif;
+  font-family: "IBM Plex Sans", "Montserrat", sans-serif;
 
   scroll-behavior: smooth;
   
   &__body {
     margin: 0;
+  }
+
+  &__menu {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    right: 0;
+    
+    transform: translateY(-100%);
+
+    transition: all 1s;
+
+    &:target {
+      transform: translateY(0);
+    }
   }
 }
