--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -1,11 +1,20 @@
 .top-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+
+  padding: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   &__menu-icon {
-    width: 12px;
-    height: 18px;
+    width: 24px;
+    height: 24px;
+    padding: 3px;
+
+    box-sizing: border-box;
 
     background-image: url("../images/burger.svg");
     background-repeat: no-repeat;
