--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,8 +3,23 @@
 
 @import "./blocks/page.scss";
 @import "./blocks/container.scss";
+@import "./blocks/main.scss";
 
 @import "./blocks/header.scss";
 @import "./blocks/top-bar.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/ticket-button.scss";
+
+@import "./blocks/events.scss";
+@import "./blocks/lecture.scss";
+
+@import "./blocks/gallery.scss";
+
+@import "./blocks/subscription.scss";
+@import "./blocks/subscription-form.scss";
+
+@import "./blocks/footer.scss";
+@import "./blocks/sm-bar.scss";
+@import "./blocks/workinfo.scss";
+@import "./blocks/sitemap.scss";
