--- a/src/styles/blocks/mainpart.scss
+++ b/src/styles/blocks/mainpart.scss
@@ -32,4 +32,30 @@
       text-align: left;
     }
   }
+
+    &__lection {
+      background-image: url("../images/sunset.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: top center;
+      height: 210px;
+      margin-bottom: 197px;
+
+      @include onTablet {
+        height: 390px;
+      }
+
+      @include onNoteBook {
+        height: 550px;
+      }
+
+      @include onDesktop {
+        height: 619px;
+      }
+
+      @include onLargeScreen {
+        height: 674px;
+      }
+    }
+
 }
