--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,17 +15,16 @@
 @import "blocks/event.scss";
 
 .lection {
-  background-image: url("../images/sunset.png");
-  background-position: bottom right;
-  height: 210px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 
-  &__image {
-    min-width: 700px;
-    max-width: 1105;
-  }
-
-  @include onTablet {
-    background-image: none;
-    
+  &__card {
+    width: 278px;
+    height: 154px;
+    background-color: #fff;
+    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    position: relative;
+    top: 97px;
   }
 }
