--- a/src/styles/blocks/sitemap.scss
+++ b/src/styles/blocks/sitemap.scss
@@ -1,15 +1,20 @@
 .sitemap {
+  grid-area: map;
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
 
-    row-gap: 20px;
+    justify-content: space-between;
 
-    width: 280px;
+    gap: 20px;
+
+    width: 100%;
     margin: 0;
     padding: 0;
 
     list-style: none;
+    transition: all 1s;
   }
 
   &__item {
