--- a/src/styles/blocks/sm-bar.scss
+++ b/src/styles/blocks/sm-bar.scss
@@ -1,10 +1,13 @@
 .sm-bar {
+  grid-area: sm;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 
   width: 100%;
+
+  transition: all 1s;
 
   @include media(tablet, desktop, desktopWide) {
     flex-direction: column;
