--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,6 +3,7 @@
   padding: 50px 0;
 
   &__top-container {
+    position: relative;
     box-sizing: border-box;
     
     width: 100%;
@@ -40,9 +41,12 @@
 
   &__service-info {
     grid-area: si;
+
     position: relative;
+
     width: 100%;
     margin: 0 0 110px;
+    
     box-sizing: border-box;
 
     @include tablet {
@@ -65,8 +69,9 @@
       right: 0;
 
       height: 1px;
+
       background-color: rgba(26, 90, 76, 0.5);
-      transform: translateY(60px);
+      transform: translateY(70px);
 
       @include tablet {
         transform: translateY(50px);
@@ -78,6 +83,7 @@
 
         height: auto;
         width: 1px;
+
         transform: translate(40px, 0);
       }
 
@@ -94,13 +100,44 @@
 
   &__bottom-box {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    gap: 14px;
 
     width: 100%;
 
     font-weight: 300;
     font-size: 12px;
-    line-height: 140.62%;
+    line-height: 140%;
     color: $colorMarshland;
+
+    @include media (tablet, desktop, desktopWide) {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
+  &__go-top {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
+    width: 50px;
+    height: 50px;
+    
+    background-image: url(../images/arrowup.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    transform: translateY(100%);
+    transition: transform 0.3s;
+
+    &:active {
+      transform: translateY(51px) scale(0.98);
+    }
+
+    @include media (tablet, desktop, desktopWide) {
+      display: none;
+    }
   }
 }
