--- a/src/styles/blocks/sitemap.scss
+++ b/src/styles/blocks/sitemap.scss
@@ -1,8 +1,9 @@
 .sitemap {
   grid-area: map;
+
   &__list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(max-content, 180px));
     grid-template-rows: repeat(4, 1fr);
 
     justify-content: space-between;
@@ -19,6 +20,38 @@
 
   &__item {
     position: relative;
+
+    &:nth-child(1) {
+      order: 1;
+    }
+
+    &:nth-child(2) {
+      order: 3;
+    }
+
+    &:nth-child(3) {
+      order: 5;
+    }
+
+    &:nth-child(4) {
+      order: 7;
+    }
+
+    &:nth-child(5) {
+      order: 2;
+    }
+
+    &:nth-child(6) {
+      order: 4;
+    }
+
+    &:nth-child(7) {
+      order: 6;
+    }
+
+    &:nth-child(8) {
+      order: 8;
+    }
   }
 
   &__link {
