My weekend result

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,21 +10,42 @@
 @import "blocks/link.scss";
 @import "blocks/page.scss";
 @import "blocks/header.scss";
-@import "blocks/grid.scss";
 @import "blocks/mainpart.scss";
 @import "blocks/event.scss";
+@import "blocks/lecture.scss";
+@import "blocks/subscription.scss";
+@import "blocks/gallery.scss";
 
-.lection {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
 
-  &__card {
-    width: 278px;
-    height: 154px;
-    background-color: #fff;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
-    position: relative;
-    top: 97px;
+.footer {
+  &__header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+
+    @include onTablet {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  &__logo {
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 36px;
+    color: $colorDark;
+  }
+
+  &__icons {
+    @include onTablet {
+      margin-top: 62px;
+    }
+  }
+
+  &__face {
+    margin-right: 25px;
   }
 }
