--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -2,17 +2,87 @@
   display: flex;
   flex-direction: column;
 
+  @include onNoteBook {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  @include onLargeScreen {
+    align-items: center;
+  }
+
+  // Это свойство используется для задания
+  // отступов сверху для новых нечётных блоков.
+
+  &--straight {
+    @include onTablet {
+      padding-top: 50px;
+    }
+
+    @include onNoteBook {
+      padding-top: 100px;
+    }
+  }
+
+  &--reverse {
+    @include onTablet {
+      padding-top: 50px;
+    }
+
+    @include onNoteBook {
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      padding-top: 100px;
+    }
+
+    @include onLargeScreen {
+      align-items: center;
+    }
+  }
+
   &__image {
     display: block;
 
     @include onTablet {
       max-height: 520px;
+      object-fit: cover;
+    }
+
+    @include onNoteBook {
+      width: 670px;
+      height: 520px;
+    }
+
+    @include onLargeScreen {
+      width: 870px;
+      height: 520px;
     }
   }
 
   &__description {
     display: flex;
     flex-direction: column;
+    padding: 15px 0 60px;
+
+    @include onTablet {
+      padding: 30px 0 0;
+    }
+
+    @include onNoteBook {
+      padding-top: 46px;
+    }
+
+    &--straight {
+      @include onLargeScreen {
+        padding-right: 150px;
+      }
+    }
+
+    &--reverse {
+      @include onLargeScreen {
+        padding-left: 150px;
+      }
+    }
   }
 
   &__type-and-date {
@@ -20,7 +90,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 15px;
+    
 
     @include onTablet {
       justify-content: flex-start;
@@ -37,6 +107,10 @@
     color: $colorDark;
     padding: 10px 0;
 
+    @include onTablet {
+      padding: 30px 0 15px;
+    }
+    
     &::after {
       position: absolute;
       right: -25px;
@@ -52,6 +126,7 @@
         width: 15px;
         height: 15px;
         right: -35px;
+        transform: translateY(5%);
       }
     }
 
@@ -68,6 +143,7 @@
     line-height: 16px;
     color: $typeColor;
     padding-right: 26px;
+    text-transform: uppercase;
 
     @include onTablet {
       font-size: 14px;
