--- a/src/styles/blocks/mainpart.scss
+++ b/src/styles/blocks/mainpart.scss
@@ -4,16 +4,20 @@
   font-style: normal;
 
   &__events {
-    padding: 70px 0 60px;
+    padding-top: 70px;
+
+    @include onTablet {
+      padding: 90px 0;
+    }
+
+    @include onNoteBook {
+      padding: 200px 0 100px;
+    }
   }
 
   &__event {
     display: flex;
     flex-direction: column;
-
-    &--first {
-      padding-bottom: 60px;
-    }
   }
 
   &__title {
@@ -30,32 +34,71 @@
       font-size: 48px;
       line-height: 48px;
       text-align: left;
+      padding-bottom: 50px;
+    }
+
+    @include onNoteBook {
+      padding-bottom: 60px;
     }
   }
 
-    &__lection {
-      background-image: url("../images/sunset.png");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: top center;
-      height: 210px;
-      margin-bottom: 197px;
+  &__lecture {
+    background-image: url("../images/sunset.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    height: 210px;
+    margin-bottom: 197px;
 
-      @include onTablet {
-        height: 390px;
-      }
-
-      @include onNoteBook {
-        height: 550px;
-      }
-
-      @include onDesktop {
-        height: 619px;
-      }
-
-      @include onLargeScreen {
-        height: 674px;
-      }
+    @include onTablet {
+      height: 390px;
+      margin-bottom: 210px;
     }
+
+    @include onNoteBook {
+      height: 550px;
+      margin-bottom: 302px;
+    }
+
+    @include onDesktop {
+      height: 619px;
+      margin-bottom: 297px;
+    }
+
+    @include onLargeScreen {
+      height: 674px;
+      margin-bottom: 316px;
+    }
+  }
+
+  &__gallery {
+    height: 625px;
+
+    @include onTablet {
+      height: 770px;
+    }
+
+    @include onNoteBook {
+      height: 1298px;
+    }
+  }
+
+  &__gallery-title {
+    margin: 0;
+    text-align: center;
+    font-size: 36px;
+    line-height: 36px;
+    padding-bottom: 24px;
+
+    @include onTablet {
+      text-align: left;
+      font-size: 48px;
+      line-height: 48px;
+    }
+
+    @include onNoteBook {
+      padding-bottom: 44px;
+    }
+  }
 
 }
