--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -6,4 +6,11 @@
 %mainTitle {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  text-transform: uppercase;
+}
+
+%blockTitle {
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  font-weight: 700;
 }
