--- a/src/styles/blocks/select.scss
+++ b/src/styles/blocks/select.scss
@@ -9,6 +9,14 @@
     padding-top: 20px;
   }
 
+  @media (max-width: 767px) {
+    align-self: center;
+    width: 90%;
+    max-width: 300px;
+    display: flex;
+    justify-content: center;
+  }
+
   &__text {
     display: flex;
     align-items: center;
@@ -21,6 +29,14 @@
     color: #0f0e08;
     height: 70px;
     border: 1px solid #1a5a4c;
+
+    @media (max-width: 767px) {
+      flex-grow: 1;
+      height: 50px;
+      padding: 0 50px;
+       
+    }
+
   }
 
   &__icon {
@@ -31,6 +47,14 @@
     padding-left: 30px;
     background: #1a5a4c;
     border: 1px solid #1a5a4c;
+
+    @media (max-width: 767px) {
+      width: 50px;
+      height: 50px;
+      padding-left: 20px;
+
+    }
+
   }
 
   &__vertical {
