--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,7 +11,13 @@
 @import "blocks/menu.scss";
 @import "blocks/list.scss";
 @import "blocks/form.scss";
+@import "blocks/main-block.scss";
+@import "blocks/events.scss";
+@import "blocks/picture.scss";
+@import "blocks/info.scss";
+@import "blocks/gallery.scss";
 
 body {
   width: 100vw;
+  margin: 0;
 }
