--- a/src/styles/blocks/main-block.scss
+++ b/src/styles/blocks/main-block.scss
@@ -47,22 +47,22 @@
   }
 
   &__gallery {
-    margin: 0 20px;
+    margin: 0 20px 100px;
 
     @media (min-width: 768px) {
-      margin: 0 34px;
+      margin: 0 34px 90px;
     }
 
     @media (min-width: 1280px) {
-      margin: 0 55px;
+      margin: 0 55px 200px;
     }
 
     @media (min-width: 1440px) {
-      margin: 0 134px;
+      margin: 0 134px 200px;
     }
 
     @media (min-width: 1920px) {
-      margin: 0 175px;
+      margin: 0 175px 200px;
     }
   }
 }
