--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -10,13 +10,19 @@
   align-items: flex-end;
   z-index: 3;
 
-  &:target {        //НЕ РАБОТАЕТ ????????????????
+  &--footer {
+    display: flex;
+    justify-content: center;
+  }
+
+  &:target {
+    //НЕ РАБОТАЕТ в  десктопном меню ????????????????
     display: flex;
     position: absolute;
     width: 50px;
     transform: translateX(0);
   }
-   
+
   &__input {
     height: 70%;
     font-size: 16px;
@@ -25,5 +31,41 @@
     border: 1px solid #e1e7ed;
     box-sizing: border-box;
     border-radius: 4px;
+
+    &--footer {
+      width: 233px;
+      height: 50px;
+      padding-left: 17px;
+      font-size: 17px;
+      line-height: 50px;
+      background-color: #fff;
+
+      @media (min-width: 768px) {
+        width: 395px;
+        height: 70px;
+        line-height: 70px;
+      }
+
+      @media (min-width: 1280px) {
+        width: 470px;
+      }
+    }
+  }
+
+  &__btn {
+    width: 50px;
+    height: 50px;
+    background-color: #f14a27;
+  
+
+    @media (min-width: 768px) {
+      width: 70px;
+      height: 70px;
+      margin-left: 10px;
+    }
+
+    @media (min-width: 1280px) {
+      margin-left: 30px;
+    }
   }
 }
