--- a/src/styles/blocks/picture.scss
+++ b/src/styles/blocks/picture.scss
@@ -26,12 +26,6 @@
     display: block;
     padding-bottom: 100%;
   }
-
-  //   &__block {
-  //     width:100%;
-  //     height: 410px;
-  //   }
-
   ///////////////////////////
   &__img {
     position: absolute;
@@ -70,8 +64,15 @@
   }
 
   &--gallery {
-    flex-grow: 1;
     width: 100%;
     height: 410px;
+    transition: all 500ms ease-in-out;
+
+    // @media (min-width: 1280px) {
+    //   display: block;
+    //   width: 100%;
+    //   height: auto;
+    //   align-self: stretch;
+    // } 
   }
 }
