--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,9 @@
 @import "blocks/picture.scss";
 @import "blocks/info.scss";
 @import "blocks/gallery.scss";
+@import "blocks/footer.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/contacts.scss";
 
 body {
   width: 100vw;
