--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,6 +1,7 @@
 .event {
   display: flex;
   flex-direction: column;
+  transition: all 0.5s;
 
   @include onNoteBook {
     flex-direction: row;
@@ -42,6 +43,7 @@
 
   &__image {
     display: block;
+    transition: transform 0.5s;
 
     @include onTablet {
       max-height: 520px;
@@ -51,6 +53,10 @@
     @include onNoteBook {
       width: 670px;
       height: 520px;
+
+      &:hover {
+        transform: scale(1.03);
+      }
     }
 
     @include onLargeScreen {
