--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -41,6 +41,11 @@
 
     @include media(onNoteBook, onDesktop, onLargeScreen) {
       display: block;
+      transition: transform 1s;
+
+      &:hover {
+        transform: scale(1.03);
+      }
     }
 
     &--1 {
@@ -108,8 +113,6 @@
     display: flex;
     flex-direction: row;
 
-    transition: transform 400ms;
-
     @include media(onNoteBook, onDesktop, onLargeScreen) {
       display: none;
     }
@@ -158,6 +161,8 @@
     cursor: pointer;
 
     transform: translateY(8px);
+
+    transition: background-color 0.8s;
 
     &:active {
       transform: translateY(3px);
