--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -75,11 +75,21 @@
     text-align: center;
     position: relative;
     top: 15px;
+    transition: all 0.4s;
 
     @include onTablet {
       font-size: 36px;
       line-height: 36px;
       top: 16px;
+    }
+
+    &:hover {
+      color: blue;
+
+      @include onTablet {
+        font-size: 37px;
+        line-height: 37px;
+      }
     }
   }
 }
