--- a/src/styles/blocks/mainpart.scss
+++ b/src/styles/blocks/mainpart.scss
@@ -4,14 +4,13 @@
   font-style: normal;
 
   &__events {
-    padding-top: 70px;
 
     @include onTablet {
-      padding: 90px 0;
+      padding-bottom: 90px;
     }
 
     @include onNoteBook {
-      padding: 200px 0 100px;
+      padding-bottom: 100px;
     }
   }
 
