--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -82,6 +82,7 @@
     height: 50px;
     width: 235px;
     padding: 18px 30px;
+    transition: all 0.5s;
 
     @include onTablet {
       height: 70px;
