--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,42 +10,13 @@
 @import "blocks/link.scss";
 @import "blocks/page.scss";
 @import "blocks/header.scss";
+@import "blocks/menu.scss";
 @import "blocks/mainpart.scss";
 @import "blocks/event.scss";
 @import "blocks/lecture.scss";
 @import "blocks/subscription.scss";
 @import "blocks/gallery.scss";
+@import "blocks/footer.scss";
+@import "blocks/schedule.scss";
+@import "blocks/contacts.scss";
 
-
-.footer {
-  &__header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 50px;
-
-    @include onTablet {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  }
-
-  &__logo {
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 36px;
-    color: $colorDark;
-  }
-
-  &__icons {
-    @include onTablet {
-      margin-top: 62px;
-    }
-  }
-
-  &__face {
-    margin-right: 25px;
-  }
-}
