--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -7,4 +7,18 @@
   &__body {
     margin: 0;
   }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateY(-100%);
+    transition: transform 0.3s;
+
+    &:target {
+      transform: translateY(0)
+    }
+  }
 }
