--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -16,6 +16,12 @@
   }
 }
 
+@mixin onTabletPro {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
 @mixin onTablet {
   @media (min-width: 768px) {
     @content;
